Name:           image-cache
Version:        0.39.1
License:        AllRightsReserved
Copyright:      (c) 2014, SeeReason Partners LLC
Author:         David Fox <dsf@seereason.com>
Maintainer:     David Fox <dsf@seereason.com>
Homepage:       http://src.seereason.com/image-cache
Synopsis:       Support for image file processing and caching
Cabal-version:  >= 1.10
build-type:     Simple
description:    Server and client side support for image handling.
source-repository head
  type:     git
  location: https://github.com/seereason/image-cache

flag pretty-112
  Description: The prettyclass package is included in pretty-1.1.2
  Default: True

Library
  Default-Language: Haskell2010
  GHC-Options: -Wall -Wredundant-constraints -Werror=incomplete-patterns -fno-warn-name-shadowing -O
  -- CPP-Options: -DLAZYIMAGES
  Default-Extensions: ConstraintKinds, CPP, DataKinds, DeriveDataTypeable, DeriveFunctor, DeriveGeneric
  Default-Extensions: FlexibleInstances, FlexibleContexts, MultiParamTypeClasses, RankNTypes
  Default-Extensions: ScopedTypeVariables, StandaloneDeriving, TypeApplications, TypeFamilies
  Exposed-Modules:
    Data.FileCache
    Data.FileCache.Internal
  Other-Modules:
    Data.FileCache.CacheMap
    Data.FileCache.CommandError
    Data.FileCache.File
    Data.FileCache.FileError
    Data.FileCache.Happstack
    Data.FileCache.ImageCrop
    Data.FileCache.ImageFile
    Data.FileCache.ImageKey
    Data.FileCache.ImageRect
    Data.FileCache.ImageSize
    Data.FileCache.Orphans
    Data.FileCache.Rational
  Build-Depends:
    base >= 4,
    binary,
    bytestring,
    cereal,
    containers,
    data-default,
    directory,
    exceptions,
    filepath,
    generic-data,
    generic-lens,
    hslogger,
    HUnit,
    lens,
    lens-path >= 3.23,
    ListLike,
    mtl,
    network-uri,
    parsec,
    pretty >= 1.1.2,
    process,
    pureMD5,
    safecopy >= 0.9.4.4,
    sr-errors >= 1.15,
    sr-utils >= 1.104,
    sr-log >= 1.16,
    syb,
    template-haskell,
    text,
    th-lift,
    th-orphans >= 0.9,
    threads,
    transformers,
    unix,
    web-routes,
    web-routes-th
  if !impl(ghcjs)
    Hs-Source-Dirs: src src-ghc
    Other-Modules:
      Data.FileCache.Acid
      Data.FileCache.Background
      Data.FileCache.Derive
      Data.FileCache.FileCache
      Data.FileCache.FileCacheTop
      Data.FileCache.FileInfo
      Data.FileCache.ImageIO
      Data.FileCache.LogException
      Data.FileCache.Pipify
      Data.FileCache.Process
      Data.FileCache.Server
      Data.FileCache.Test
      Data.FileCache.Upload
    Build-Depends:
      acid-state >= 0.16,
      filemanip-extra,
      happstack-server,
      JuicyPixels,
      ListLike,
      process >= 1.4.3,
      process-extras >= 0.7,
      QuickCheck,
      regex-tdfa,
      regex-compat-tdfa,
      temporary,
      unix,
      Unixutils,
      utf8-string
    build-tools:
      fbida
  else
    Hs-Source-Dirs: src
    Build-Depends: Cabal

test-suite image-cache-tests
  Default-Language: Haskell2010
  if impl(ghcjs)
    Buildable: False
  else
    Buildable: True
  type: exitcode-stdio-1.0
  Hs-Source-Dirs: Tests
  Main-Is: Main.hs
  Other-Modules: Cache Exif LaTeX
  Build-Depends:
    acid-state,
    base >= 4,
    binary,
    bytestring,
    containers,
    directory,
    either,
    exceptions,
    filemanip-extra,
    filepath,
    HaTeX,
    HUnit,
    image-cache >= 0.19,
    mtl,
    text
  build-tools:
    fbida
